--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,49 @@
-#heading{
-    /* text-align:center; */
-    color:Red;
-    background-color:yellow;
+.header{
+    justify-content:space-between;
+    display:flex;
+    border: 0.5px solid black;
+}
+
+.logo{
+    width: 150px;
+}
+
+.nav-items > ul{
+    font-size:24px;
+    padding: 0px 20px;
+    display:flex;
+    list-style-type:none;
+}
+
+.nav-items > ul > li {
+    padding: 10px;
+    margin: 10px;
+}
+.search{
+    padding:10px;
+}
+.res-container{
+    display:Flex;
+    flex-wrap:wrap;
+}
+.res-card{
+    margin:5px;
+    height:auto;
+    background-color: #f0f0f0;
+    width: 200px;
+}
+
+.res-logo{
+      padding: -5px;
+    width:100%;
+}
+
+.res-card:hover{
+    cursor:pointer;
+    border: 1px solid black;
+}
+
+.filter-btn{
+    margin:10px;
+    cursor:pointer;
 }
