styling using Tailwind css

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
-.header {
+@import "tailwindcss";
+
+/* .header {
     justify-content: space-between;
     display: flex;
     border: 0.5px solid black;
@@ -70,3 +72,8 @@
 .filter{
     display:flex;
 }
+
+.user-card{
+    padding: 10px;
+    border: 1px solid black;
+} */
